detail fragment created

--- a/app/src/main/res/navigation/root_nav.xml
+++ b/app/src/main/res/navigation/root_nav.xml
@@ -10,4 +10,9 @@
         android:name="com.gusoft.planes_rcview_example_project.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.gusoft.planes_rcview_example_project.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail" />
 </navigation>
