--- a/app/src/main/res/layout/rc_view_item.xml
+++ b/app/src/main/res/layout/rc_view_item.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_margin="20dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginBottom="10dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="10dp">
 
