--- a/app/src/main/res/layout/rc_view_item.xml
+++ b/app/src/main/res/layout/rc_view_item.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/plane_card"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_marginLeft="20dp"
