--- a/app/src/main/res/navigation/root_nav.xml
+++ b/app/src/main/res/navigation/root_nav.xml
@@ -17,6 +17,9 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <argument
+            android:name="planeModel"
+            app:argType="com.gusoft.planes_rcview_example_project.PlaneModel" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
